--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,125 @@
+aiogram==2.25.1
+aiohttp==3.8.4
+aiosignal==1.3.1
 anyio==4.2.0
-asgiref==3.7.2
-certifi==2023.11.17
-Django==5.0
-exceptiongroup==1.2.0
-h11==0.14.0
+appdirs==1.4.4
+asgiref==3.5.2
+async-generator==1.10
+async-timeout==4.0.2
+attrs==21.4.0
+Babel==2.9.1
+beautifulsoup4==4.11.2
+blessed==1.20.0
+cachetools==5.3.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==3.0.1
+click==8.1.7
+contourpy==1.0.6
+cryptography==36.0.1
+cssselect==1.2.0
+cycler==0.11.0
+decorator==5.1.1
+distlib==0.3.4
+distro==1.8.0
+Django==4.1.2
+exceptiongroup==1.1.0
+fake-useragent==1.1.1
+filelock==3.6.0
+fonttools==4.38.0
+frozenlist==1.3.3
+future==0.18.3
+geocoder==1.38.1
+geographiclib==2.0
+geopy==2.4.1
+get-geckodriver==0.2.1
+google-api-core==2.14.0
+google-api-python-client==2.108.0
+google-auth==2.23.4
+google-auth-httplib2==0.1.1
+googleapis-common-protos==1.61.0
+greenlet==2.0.1
+h11==0.13.0
 httpcore==1.0.2
+httplib2==0.22.0
 httpx==0.26.0
-idna==3.6
-sniffio==1.3.0
-sqlparse==0.4.4
-typing_extensions==4.9.0
+idna==3.3
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+iniconfig==2.0.0
+jsonpickle==2.2.0
+kiwisolver==1.4.4
+lxml==4.9.2
+magic-filter==1.0.9
+marionette-driver==3.1.0
+matplotlib==3.6.2
+mozdevice==4.1.0
+mozfile==3.0.0
+mozinfo==1.2.2
+mozlog==7.1.1
+mozprocess==1.3.0
+mozprofile==2.5.0
+mozrunner==8.2.1
+mozterm==1.0.0
+mozversion==2.3.0
+multidict==6.0.4
+numpy==1.23.5
+oauth2client==4.1.3
+openai==0.27.7
+outcome==1.1.0
+packaging==21.3
+pandas==2.2.0
+parse==1.19.0
+Pillow==9.3.0
+platformdirs==2.5.1
+playwright==1.30.0
+pluggy==1.0.0
+protobuf==4.25.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyDrive==1.3.1
+pyee==8.2.2
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyppeteer==1.0.2
+pyquery==2.0.0
+PySocks==1.7.1
+pytest==7.2.1
+pytest-base-url==2.0.0
+pytest-playwright==0.3.0
+python-dateutil==2.8.2
+python-slugify==8.0.0
+pytz==2023.3
+pywifi==1.1.12
+PyYAML==6.0.1
+ratelim==0.1.6
+requests==2.28.2
+requests-html @ git+https://github.com/psf/requests-html@026c4e5217cfc8347614148aab331d81402f596b
+rotate-screen==0.1.0
+rsa==4.9
+scipy==1.10.1
+selenium==4.1.3
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+text-unidecode==1.3
+tomli==2.0.1
+tqdm==4.64.1
+trio==0.20.0
+trio-websocket==0.9.2
+twill==3.1
+typing_extensions==4.4.0
+tzdata==2023.4
+uritemplate==4.1.1
+urllib3==1.26.8
+virtualenv==20.13.1
+w3lib==2.1.1
+wcwidth==0.2.6
+websockets==10.4
+wsproto==1.1.0
+yarl==1.9.2
 ymaps==1.3
+zipp==3.13.0
