--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
+anyio==4.2.0
+asgiref==3.7.2
+certifi==2023.11.17
 Django==5.0
-pandas==2.0.3
-python_dateutil==2.8.2
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
+numpy==1.26.3
+openpyxl==3.1.2
+pandas==2.2.0
+python-dateutil==2.8.2
+pytz==2024.1
+six==1.16.0
+sniffio==1.3.0
+sqlparse==0.4.4
+typing_extensions==4.9.0
+tzdata==2023.4
+XlsxWriter==3.2.0
 ymaps==1.3
